# cli-plugins

./: .gitignore  .repo-audit-2026-02-12.md  AGENTS.md  CODE_OF_CONDUCT.md  LICENSE  README.md  cli_crawler.py  config.yaml  pyproject.toml  test-review-demo.js
.agent/workflows/: feature-dev.md  push-pr.md  smoke-test.md  verify-and-ship.md
.dev/project_audit_16-03-2026/lote1_checkboxes/: AUD-003.md  AUD-005.md  AUD-006.md
.github/: copilot-instructions.md
.github/agents/: speckit.ideate.agent.md  speckit.select.agent.md  speckit.structure.agent.md  speckit.validate.agent.md
.github/prompts/: speckit.ideate.prompt.md  speckit.select.prompt.md  speckit.structure.prompt.md
.github/workflows/: ai-review.yml  ci.yml  codeql-analysis.yml
.specify/memory/: constitution.md
crawler/: __init__.py  config.py  detector.py  discovery.py  executor.py  formatter.py  models.py  parser.py  pipeline.py
crawler/parsers/: commands.py  envvars.py  examples.py  flags.py  manpage.py  sections.py
docs/: CONTRIBUTING.md  README.md
plugins/cli-awk/.claude-plugin/: plugin.json
plugins/cli-awk/commands/: scan-cli.md
plugins/cli-awk/scripts/: rescan.sh
plugins/cli-claude-flow/.claude-plugin/: plugin.json
plugins/cli-claude-flow/commands/: scan-cli.md
plugins/cli-claude-flow/scripts/: rescan.sh
plugins/cli-curl/.claude-plugin/: plugin.json
plugins/cli-curl/commands/: scan-cli.md
plugins/cli-curl/scripts/: rescan.sh
plugins/cli-docker/.claude-plugin/: plugin.json
plugins/cli-docker/commands/: scan-cli.md
plugins/cli-docker/scripts/: rescan.sh
plugins/cli-g++/.claude-plugin/: plugin.json
plugins/cli-g++/commands/: scan-cli.md
scripts/: generate_plugin.py
specs/001-cli-plugins-base/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/config/: __init__.py  audit.py
src/crawler/: cli_crawler.py  config.py  detector.py  discovery.py  executor.py  formatter.py  models.py  parser.py  pipeline.py  version.py
src/crawler/parsers/: __init__.py  (+7 more)
src/generator/: __init__.py  plugin_generator.py
src/lib/: __init__.py  cli_identity.py  logger.py  subprocess_utils.py
tests/: capture_fixtures.py  conftest.py  test_discovery_thread_safety.py  test_generate_plugin.py  test_parser_commands.py  test_parser_description_cleaning.py  test_parser_flags.py  test_parser_manpage.py  test_parser_sections.py  test_pipeline_integration.py
tests/integration/: test_gcc_climap_generation.py  test_pnpm_climap_generation.py
tests/performance/: test_smoke_perf.py
tests/unit/: test_author_config.py  test_cli_crawler_basic.py  test_cli_crawler_compat.py  test_cli_name_canonicalization.py  test_command_parsing_basic.py  test_config_audit.py  test_edge_case_auth_help.py  test_edge_case_long_help.py  test_edge_case_no_help.py  test_embedded_help_boundary.py  test_executor_security.py  test_flag_dedup_embedded_help.py  test_flag_parsing_basic.py  test_flag_parsing_gnu_single_dash.py  test_formatter_raw_contract.py  test_generate_plugin_cli_errors.py  test_keyword_generation.py  test_logger.py  test_models.py  test_output_layout.py  test_parser_pnpm_grouped_help.py  test_parsing_rich_man.py  test_pipeline_missing_cli_exit.py  test_progressive_disclosure.py  test_subcommand_help_safety.py  test_subprocess_utils.py  test_usage_line_option_extraction.py  test_version_detection_fallback.py
(+169 files in other folders)
