[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cli-plugins"
version = "0.1.0"
description = "Crawl CLI --help outputs and generate Claude Code plugins with expert command knowledge"
requires-python = ">=3.11"
dependencies = []
license = "MIT"
readme = "README.md"
keywords = [
    "cli", "crawler", "claude-code", "plugin", "ai-agent",
    "llm", "help-parser", "cli-reference", "code-assistant",
    "developer-tools", "openapi-for-cli",
]
authors = [
    { name = "Nuno Salvacao", email = "nuno.salvacao@gmail.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/nsalvacao/cli-plugins"
Repository = "https://github.com/nsalvacao/cli-plugins"
Issues = "https://github.com/nsalvacao/cli-plugins/issues"

[project.scripts]
cli-crawler = "crawler.pipeline:main"
generate-plugin = "generator.plugin_generator:main"

[tool.hatch.build.targets.wheel]
sources = ["src"]
packages = ["src/crawler", "src/generator", "src/config", "src/lib"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.9.0",
    "black>=23.0.0",
    "radon>=6.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "unit: Unit tests (fast, no external dependencies)",
    "integration: Integration tests (require CLI binaries installed)",
    "e2e: End-to-end tests (full pipeline)",
    "performance: Performance benchmarks",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501", "E741", "SIM108", "SIM102", "SIM103", "B007"]

[tool.ruff.lint.isort]
known-first-party = ["crawler", "generator"]
